SubMenu NAVBAR y CSS

--- a/index.html
+++ b/index.html
@@ -30,8 +30,36 @@
                               Catálogo
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Tipo de Auto</a></li>
+                                <li class="dropdown-submenu">
+                                    <a class="dropdown-item" tabindex="-1" href="#">Tipo de Auto</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Sedán</a></li>
+                                        <li><a class="dropdown-item" href="#">SUV</a></li>
+                                        <li><a class="dropdown-item" href="#">Convertible</a></li>
+                                        <li><a class="dropdown-item" href="#">Doble Cabina</a></li>
+                                        <li><a class="dropdown-item" href="#">Furgón</a></li>
+                                        <li><a class="dropdown-item" href="#">Hatchback</a></li>
+                                        <li><a class="dropdown-item" href="#">Coupé</a></li>
+                                        <li><a class="dropdown-item" href="#">Station Wagon</a></li>
+                                    </ul>
+                                    <li class="dropdown-divider"></li>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a class="dropdown-item" tabindex="-1" href="#">Marca</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Chevrolet</a></li>
+                                        <li><a class="dropdown-item" href="#">Hyundai</a></li>
+                                        <li><a class="dropdown-item" href="#">Toyota</a></li>
+                                        <li><a class="dropdown-item" href="#">Nissan</a></li>
+                                        <li><a class="dropdown-item" href="#">Suzuki</a></li>
+                                        <li><a class="dropdown-item" href="#">Kia</a></li>
+                                        <li><a class="dropdown-item" href="#">Peugeot</a></li>
+                                        <li><a class="dropdown-item" href="#">Ford</a></li>
+                                    </ul>
+                                    <li class="dropdown-divider"></li>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Nuevos</a></li>
+                                <li class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Usados</a></li>
                             </ul>
                         </li>
