--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="js/dropdown.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <title>pagina</title>
@@ -14,8 +15,8 @@
     <header class="encabezado">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="#" alt="" width="30" height="24" class="d-inline-block align-text-top"> NOMBRE EMPRESA
+                <a class="navbar-brand logo-empresa" href="#">
+                    <img src="img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top" style="margin-left: 10px;"> RAIO MACUIN
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,12 +27,9 @@
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Catálogo
-                            </a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item" tabindex="-1" href="#">Tipo de Auto</a>
+                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Tipo de Auto</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Sedán</a></li>
                                         <li><a class="dropdown-item" href="#">SUV</a></li>
@@ -42,24 +40,26 @@
                                         <li><a class="dropdown-item" href="#">Coupé</a></li>
                                         <li><a class="dropdown-item" href="#">Station Wagon</a></li>
                                     </ul>
-                                    <li class="dropdown-divider"></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
                                 </li>
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item" tabindex="-1" href="#">Marca</a>
+                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Marcas</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Chevrolet</a></li>
-                                        <li><a class="dropdown-item" href="#">Hyundai</a></li>
-                                        <li><a class="dropdown-item" href="#">Toyota</a></li>
-                                        <li><a class="dropdown-item" href="#">Nissan</a></li>
-                                        <li><a class="dropdown-item" href="#">Suzuki</a></li>
-                                        <li><a class="dropdown-item" href="#">Kia</a></li>
-                                        <li><a class="dropdown-item" href="#">Peugeot</a></li>
                                         <li><a class="dropdown-item" href="#">Ford</a></li>
+                                        <li><a class="dropdown-item" href="#">Hyundai</a></li>
+                                        <li><a class="dropdown-item" href="#">Kia</a></li>
+                                        <li><a class="dropdown-item" href="#">Nissan</a></li>
+                                        <li><a class="dropdown-item" href="#">Mercedes</a></li>
+                                        <li><a class="dropdown-item" href="#">Peugeot</a></li>
+                                        <li><a class="dropdown-item" href="#">Toyota</a></li>
                                     </ul>
-                                    <li class="dropdown-divider"></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Nuevos</a></li>
-                                <li class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Usados</a></li>
                             </ul>
                         </li>
@@ -69,38 +69,39 @@
                     </ul>
                     <form class="d-flex buscar">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                     <a href="#">
-                        <button style="margin: 10px;" type="button" class="btn btn-light">Vende tu auto</button>
+                        <button style="margin: 10px;" type="button" class="btn btn-light btn-vende">Vende tu auto</button>
                     </a>
-                    <a id="iniciosesion" href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <img style="width: 60px; height: 55px;" src="img/login.png" alt="user">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <img style="width: 60px; height: 50px;" src="img/login.png" alt="user">
                     </a>
-                    <a style="color: white;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <a style="color: white; margin-right: 10px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Login
-                        </a>
+                    </a>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <div class="modal-header">
-                                    <ul class="nav nav-tabs">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">Inicio Sesión</a>
+                                <div class="modal-header"> <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                                <div class="modal-body">
+                                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                        <li class="nav-item" role="presentation" style="margin-right: 0px; margin-left: 0px;">
+                                            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="Login" aria-selected="true">Iniciar Sesión</button>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" aria-current="page" href="#">Registrarse</a>
+                                        <li class="nav-item" role="presentation" style="margin-right: 0px; margin-left: 0px;">
+                                            <button class="nav-link" id="registro-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="Registro" aria-selected="false">Registrarse</button>
                                         </li>
                                     </ul>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
+                                    <div class="tab-content" id="myTabContent">
+                                        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="home-tab">...</div>
+                                        <div class="tab-pane fade" id="registro" role="tabpanel" aria-labelledby="profile-tab">...</div>
+                                    </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-primary">Iniciar Sesión</button>
                                 </div>
                             </div>
                         </div>
