--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="#">
                         <button style="margin: 10px;" type="button" class="btn btn-light btn-vende">Vende tu auto</button>
                     </a>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <img style="width: 60px; height: 50px;" src="img/login.png" alt="user">
                     </a>
                     <a style="color: white; margin-right: 10px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
