--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
-                    <a href="#">
+                    <a href="vendeauto.html">
                         <button style="margin: 10px;" type="button" class="btn btn-light btn-vende">Vende tu auto</button>
                     </a>
                     <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -275,7 +275,7 @@
                 </div>
         
                 <div class="info ">
-                    <img src="img/imagen-info2.jpg " alt="Imagen 2 ">
+                    <img src="img/imagen-info2.jpg " alt="Imagen 2 " class="img-fluid ">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, laborum delectus. Ducimus, repellat! Quam illum iste molestiae harum, assumenda quia dolore. Aspernatur exercitationem suscipit ab consectetur nam doloremque quibusdam voluptatum?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestias, eum, quae sed vero rerum delectus eos ratione porro expedita aspernatur eveniet nemo iusto! Eos sed laboriosam ipsum iure consequatur!
@@ -285,10 +285,38 @@
          </aside>
      </article>
      </section>
-
-
-    <footer class="piepagina ">
-
+     <!-- FOOTER -->
+     <footer class="footer bg-dark ">
+        <div class="container ">
+            <div class="row mb-5 ">
+                <div class="col-md-4 logo-footer ">
+                    <h1>Raio Macuin</h1>
+                </div>
+                <div class="col-md-8 social ">
+                    <ul class="list-unstyled ">
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-facebook "> Facebook</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-twitter-square "> Twitter</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-instagram "> Instagram</i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="container derechos ">
+                <p><i class="fa fa-copyright " aria-hidden="true "></i> Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
