--- a/vendeauto.html
+++ b/vendeauto.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
@@ -223,25 +223,25 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label">Correo</label>
+                <label for="validationCustomEmail" class="form-label">Correo</label>
                 <div class="input-group has-validation">
                     <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                    <input type="text" class="form-control" id="validationCustomEmail" aria-describedby="inputGroupPrepend" required>
                     <div class="invalid-feedback">
                         Escriba un correo válido.
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
-                <label for="validationCustom01" class="form-label">Marca de auto</label>
-                <input type="text" class="form-control" id="validationCustom01" value="" required>
+                <label for="validationCustom03" class="form-label">Marca de auto</label>
+                <input type="text" class="form-control" id="validationCustom03" value="" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="col-md-3">
-                <label for="validationCustom01" class="form-label">Modelo de auto</label>
-                <input type="text" class="form-control" id="validationCustom01" value="" required>
+                <label for="validationCustom04" class="form-label">Modelo de auto</label>
+                <input type="text" class="form-control" id="validationCustom04" value="" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
@@ -258,6 +258,40 @@
             </div>
         </form>
     </div>
+    <footer class="footer bg-dark ">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md-4 logo-footer">
+                    <h1>Raio Macuin</h1>
+                </div>
+                <div class="col-md-8 social">
+                    <ul class="list-unstyled ">
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-facebook "> Facebook</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-twitter-square "> Twitter</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=" ">
+                                <i class="fab fa-instagram "> Instagram</i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="container derechos ">
+                <p><i class="fa fa-copyright " aria-hidden="true "></i> Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js " integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf " crossorigin="anonymous "></script>
 </body>
