Agregando etiquetas para el SEO del sitio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Raio Macuin</title>
+
+    <!--* ********** Etiquetas para el SEO ********** *-->
+
+    <title>Raio Macuin</title>
+    <!-- Etiqueta del SEO para definir una descripción del sitio(que aparece al buscar el sitio) -->
+    <meta name="description"
+    content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
+    <!-- Etiqueta del SEO para definir una URL canónica que previene que se penalice el SEO cuando
+    se ingresa al sitio con diferentes URLs por lo tanto en esta etiqueta se define la URL principal -->
+    <link rel="canonical" href="https://josueaguilera14.github.io/CompraVentaAuto">
+    <!-- Etiqueta del SEO para definir el color de la ventana del navegador en dispositivos móviles -->
+    <meta name="theme-color" content="#343a40">
+
+    <!-- Meta etiquetas para Open graph y twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:title" name="twitter:title" content="Rayo Macuin - Compra y Venta de Autos">
+    <meta property="og:description" name="twitter:description"
+    content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
+    <meta property="og:image" name="twitter:image"
+    content="https://josueaguilera14.github.io/CompraVentaAuto/assets/heroImage.jpg">
+    <meta property="og:url" name="twitter:url"
+    content="https://josueaguilera14.github.io/CompraVentaAuto">
 </head>
 
 <body>
