Solucionando heroImage para qu se pueda visualizar en github

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
             </div>
         </div>
         <section class="home">
-            <article class="hero-image" style="--hero-image: url('/img/heroImage.jpg'); --hero-attachment: fixed;">
-                <aside class="hero-image-opacity" style="--hero-opacity-color: rgba(0, 0, 0, 0.5);">
-                    <div class="hero-image-content" style="--hero-text-color: #FFFFFF;" ">
+            <article class="hero-image">
+                <aside class="hero-image-opacity">
+                    <div class="hero-image-content">
                         <h2 class="hero-image-title ">
                             Raio Macuin<br>siempre contigo
                         </h2>
@@ -232,9 +232,9 @@
 
     <section class="contenido ">
         <!-- agregando al 'style' una variable CSS con la imagen del HeroImage-->
-        <article class="hero-image " style="--hero-image: url( '/img/heroImage-services.jpg'); --hero-attachment: scroll; ">
-         <aside class="hero-image-opacity " style="--hero-opacity-color: rgba(255, 255, 255, 0.5); ">
-             <div class="hero-image-content ">
+        <article class="hero-image">
+         <aside class="hero-image-opacity">
+             <div class="hero-image-content">
                 <h2 class="section-title ">¡Variedad de modelos y ofertas!</h2>
 
                 <div class="info ">
