--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                             </li>
                         </ul>
         
-                        <aside class="slides-nav ">
+                        <!-- <aside class="slides-nav ">
                             <label for="slide-1 " id="dot-1 "></label>
                             <label for="slide-2 " id="dot-2 "></label>
                             <label for="slide-3 " id="dot-3 "></label>
                             <label for="slide-4 " id="dot-4 "></label>
-                        </aside>
+                        </aside> -->
                     </article>
                 </div>
         
