--- a/contacto.html
+++ b/contacto.html
@@ -217,12 +217,14 @@
                 </div>
             </div>
         </div>
+
+        <!-- HeroImage -->
         <section class="home">
-            <article class="hero-image">
+            <article class="hero-image hero-image-contacto">
                 <aside class="hero-image-opacity">
                     <div class="hero-image-content">
                         <h2 class="hero-image-title ">
-                            Raio Macuin<br>siempre contigo
+                            ¡Contactanos!<br>¿Que esperas?
                         </h2>
                     </div>
                 </aside>
@@ -230,9 +232,18 @@
         </section>
     </header>
 
-    <form action="">
-        
+    <!-- Contacto -->
+    <form class="contact-form box-shadow-1">
+        <input type="text" name="name" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern= "^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$">
+
+        <input type="email" name="email" placeholder="Ingresa tu correo *" title="Email incorrecto"
+        pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+
+        <textarea name="comments" cols="50" rows="10" placeholder="Déjame tus comentarios *" required></textarea>
+
+        <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
     </form>
+
    
      <!-- FOOTER -->
      <footer class="footer bg-dark ">
