--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                            <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
                         </li>
                     </ul>
                     <form class="d-flex buscar">
