--- a/contacto.html
+++ b/contacto.html
@@ -14,8 +14,7 @@
 
     <title>Raio Macuin</title>
     <!-- Etiqueta del SEO para definir una descripción del sitio(que aparece al buscar el sitio) -->
-    <meta name="description"
-    content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
+    <meta name="description" content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
     <!-- Etiqueta del SEO para definir una URL canónica que previene que se penalice el SEO cuando
     se ingresa al sitio con diferentes URLs por lo tanto en esta etiqueta se define la URL principal -->
     <link rel="canonical" href="https://josueaguilera14.github.io/CompraVentaAuto">
@@ -26,12 +25,9 @@
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:title" name="twitter:title" content="Rayo Macuin - Compra y Venta de Autos">
-    <meta property="og:description" name="twitter:description"
-    content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
-    <meta property="og:image" name="twitter:image"
-    content="https://josueaguilera14.github.io/CompraVentaAuto/assets/heroImage.jpg">
-    <meta property="og:url" name="twitter:url"
-    content="https://josueaguilera14.github.io/CompraVentaAuto">
+    <meta property="og:description" name="twitter:description" content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
+    <meta property="og:image" name="twitter:image" content="https://josueaguilera14.github.io/CompraVentaAuto/assets/heroImage.jpg">
+    <meta property="og:url" name="twitter:url" content="https://josueaguilera14.github.io/CompraVentaAuto">
 </head>
 
 <body>
@@ -47,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catálogo </a>
@@ -87,7 +83,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                            <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
                         </li>
                     </ul>
                     <form class="d-flex buscar">
@@ -234,19 +230,18 @@
 
     <!-- Contacto -->
     <form class="contact-form box-shadow-1">
-        <input type="text" name="name" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern= "^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$">
+        <input type="text" name="name" placeholder="Ingresa tu nombre *" title="Nombre sólo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$">
 
-        <input type="email" name="email" placeholder="Ingresa tu correo *" title="Email incorrecto"
-        pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+        <input type="email" name="email" placeholder="Ingresa tu correo *" title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
 
         <textarea name="comments" cols="50" rows="10" placeholder="Déjame tus comentarios *" required></textarea>
 
         <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
     </form>
 
-   
-     <!-- FOOTER -->
-     <footer class="footer bg-dark ">
+
+    <!-- FOOTER -->
+    <footer class="footer bg-dark ">
         <div class="container ">
             <div class="row mb-5 ">
                 <div class="col-md-4 logo-footer ">
