Enlazando album al sitio principal

--- a/albumAutos.html
+++ b/albumAutos.html
@@ -13,15 +13,15 @@
 <body>
     <h1>Galería Autos</h1>
     <span class="linea"></span>
-    <h1>Convertibles</h1>
+    <!-- Maseratti Convertible -->
+    <h1 id="convertible">Convertibles</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image1"><img src="img/maserattiCon01.jpg" alt=""></a>
         <a href="#image2"><img src="img/maserattiCon02.jpg" alt=""></a>
         <a href="#image3"><img src="img/maserattiCon03.jpg" alt=""></a>
         <a href="#image4"><img src="img/maserattiCon04.jpg" alt=""></a>
     </section>
-
     <article class="light-box" id="image1">
             <a href="#image4" class="next"><i class="fas fa-arrow-left"></i></a>
             <img src="img/maserattiCon01.jpg" alt="">
@@ -50,9 +50,10 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>Hatchback</h1>
+    <!-- Volkswagen Hatchback -->
+    <h1 id="hatchback">Hatchback</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image5"><img src="img/volkswagenHb01.jpg" alt=""></a>
         <a href="#image6"><img src="img/volkswagenHb02.jpg" alt=""></a>
         <a href="#image7"><img src="img/volkswagenHb03.jpg" alt=""></a>
@@ -87,9 +88,10 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>Furgones</h1>
+    <!-- Renalut Furgones -->
+    <h1 id="furgon">Furgones</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image9"><img src="img/renalutFg01.jpg" alt=""></a>
         <a href="#image10"><img src="img/renalutFg02.jpg" alt=""></a>
         <a href="#image11"><img src="img/renalutFg03.jpg" alt=""></a>
@@ -124,9 +126,10 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>Sedan</h1>
+    <!-- Tesla Sedan -->
+    <h1 id="sedan">Sedan</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image13"><img src="img/teslaSedan01.jpg" alt=""></a>
         <a href="#image14"><img src="img/teslaSedan02.jpg" alt=""></a>
         <a href="#image15"><img src="img/teslaSedan03.jpg" alt=""></a>
@@ -161,9 +164,10 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>Doble Cabina</h1>
+    <!-- Toyota Doble Cabina -->
+    <h1 id="doblecabina">Doble Cabina</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image17"><img src="img/toyotaDc01.jpg" alt=""></a>
         <a href="#image18"><img src="img/toyotaDc02.jpg" alt=""></a>
         <a href="#image19"><img src="img/toyotaDc03.jpg" alt=""></a>
@@ -198,7 +202,8 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>Station Wagon</h1>
+    <!-- Nissan Station Wagon -->
+    <h1 id="stationwagon">Station Wagon</h1>
     <span class="linea"></span>
     <section class="galeria">
         <a href="#image21"><img src="img/nissanSw01.jpg" alt=""></a>
@@ -235,9 +240,10 @@
         <a href="#" class="close">X</a>
     </article>
     <span class="linea"></span>
-    <h1>SUV</h1>
+    <!-- Honda SUV -->
+    <h1 id="suv">SUV</h1>
     <span class="linea"></span>
-    <section class="galeria">
+    <section class="galeria" >
         <a href="#image25"><img src="img/hondaSuv01.jpg" alt=""></a>
         <a href="#image26"><img src="img/hondaSuv02.jpg" alt=""></a>
         <a href="#image27"><img src="img/hondaSuv03.jpg" alt=""></a>
