Mejorando Responsive de las imagenes que acompañan al slider

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                 </div>
         
                 <div class="info ">
-                    <img src="img/imagen-info2.jpg " alt="Imagen 2 " class="img-fluid ">
-                    <p>
+                    <img src="img/imagen-info2.jpg " alt="Imagen 2 " class="img-fluid">
+                    <p class="bg-hero-image">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, laborum delectus. Ducimus, repellat! Quam illum iste molestiae harum, assumenda quia dolore. Aspernatur exercitationem suscipit ab consectetur nam doloremque quibusdam voluptatum?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestias, eum, quae sed vero rerum delectus eos ratione porro expedita aspernatur eveniet nemo iusto! Eos sed laboriosam ipsum iure consequatur!
                     </p>
