--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#">Nuevos</a></li>
                                 <li><a class="dropdown-item" href="#">Usados</a></li>
+                                <li><a class="dropdown-item" href="albumAutos.html">Galeria</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
