--- a/albumAutos.html
+++ b/albumAutos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Album Venta Autos</title>
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/albumAutos.css">
      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -199,7 +200,7 @@
             <section class="home">
                 <article class="hero-image" style="--hero-image: url('/img/heroImage.jpg'); --hero-attachment: fixed;">
                     <aside class="hero-image-opacity" style="--hero-opacity-color: rgba(0, 0, 0, 0.5);">
-                        <div class="hero-image-content" style="--hero-text-color: #FFFFFF;" ">
+                        <div class="hero-image-content" style="--hero-text-color: #FFFFFF;" >
                             <h2 class="hero-image-title ">
                                 Raio Macuin<br>siempre contigo
                             </h2>
