Añadiendo Hero-image y slogan a la sección de galeria

--- a/albumAutos.html
+++ b/albumAutos.html
@@ -197,12 +197,13 @@
                     </div>
                 </div>
             </div>
+
             <section class="home">
-                <article class="hero-image" style="--hero-image: url('/img/heroImage.jpg'); --hero-attachment: fixed;">
-                    <aside class="hero-image-opacity" style="--hero-opacity-color: rgba(0, 0, 0, 0.5);">
-                        <div class="hero-image-content" style="--hero-text-color: #FFFFFF;" >
+                <article class="hero-image hero-image-galeria">
+                    <aside class="hero-image-opacity">
+                        <div class="hero-image-content">
                             <h2 class="hero-image-title ">
-                                Raio Macuin<br>siempre contigo
+                                Raio Macuin te conoce<br>!Aquí está tu solución!
                             </h2>
                         </div>
                     </aside>
