--- a/contacto.html
+++ b/contacto.html
@@ -221,7 +221,7 @@
                 <aside class="hero-image-opacity">
                     <div class="hero-image-content">
                         <h2 class="hero-image-title ">
-                            ¡Contactanos!<br>¿Que esperas?
+                            ¡Contáctanos!<br>¿Qué esperas?
                         </h2>
                     </div>
                 </aside>
