Agregando icono a todas las páginas del sitio web

--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,9 @@
 
     <!--* ********** Etiquetas para el SEO ********** *-->
 
+
+    <!-- Etiqueta del SEO para definir un icono -->
+    <link rel="shortcut icon" href="img/favicon.ico">
     <title>Raio Macuin</title>
     <!-- Etiqueta del SEO para definir una descripción del sitio(que aparece al buscar el sitio) -->
     <meta name="description" content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
