--- a/albumAutos.html
+++ b/albumAutos.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Album Venta Autos</title>
+    <!-- Etiqueta del SEO para definir un icono -->
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/albumAutos.css">
      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
