--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--* ********** Etiquetas para el SEO ********** *-->
 
     <title>Raio Macuin</title>
+
+    <!-- Etiqueta del SEO para definir un icono -->
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Etiqueta del SEO para definir una descripción del sitio(que aparece al buscar el sitio) -->
     <meta name="description"
     content="Hola bienvenid@s al sitio Raio Macuin, encontrarás las mejores ofertas y lo que necesitas aquí">
